
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_SUCCESS ;
 int exit (int ) ;
 int formatme (char*) ;
 int fprintf (int ,char*,char*) ;
 int printf (char*) ;
 int stderr ;

int main (int argc, char **argv){

 printf ("Axigen 2.0 beta Remote pop3 exploit\n"
  "by: <fuGich@gmail.com>\n\n");

 if (argc <= 1)
 {
  fprintf (stderr, "Usage: %s <host>\n\n", argv[0]);
  exit (EXIT_SUCCESS);
 }

 formatme (argv[1]);
}
